--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,8 @@
       <input type="text" placeholder="quote" name="quote" />
       <button type="submit">Submit</button>
     </form>
-    <%= quotes %>
+    /* eslint-disable */ 
+    <%= quotes %> 
+    /* eslint-enable */
   </body>
 </html>
