--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>MY APP</title>
+    <title>Star Wars Quote App</title>
   </head>
   <body>
     <h1>May Node and Express be with you.</h1>
@@ -12,8 +12,24 @@
       <input type="text" placeholder="quote" name="quote" />
       <button type="submit">Submit</button>
     </form>
-    /* eslint-disable */ 
-    <%= quotes %> 
-    /* eslint-enable */
+    <h2> Quotes </h2>
+
+  <ul class="quotes">
+    <!-- Loop through quotes -->
+    <% for(var i = 0; i < quotes.length; i++) {%>
+      <li class="quote">
+        <!-- Output name from the iterated quote object -->
+        <span><%= quotes[i].name %></span>:
+        <!-- Output quote from the iterated quote object -->
+        <span><%= quotes[i].quote %></span>
+      </li>
+    <% } %>
+  </ul>
+  <div>
+    <h2>Darth Vader invades!</h2>
+    <p>Replace first Yoda's quote with a quote written by Darth Vader</p>
+    <button id="update-button">Replace Yoda's quote</button>
+  </div>
+  <script src="/main.js"></script>
   </body>
 </html>
