--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,12 @@
     <p>Replace first Yoda's quote with a quote written by Darth Vader</p>
     <button id="update-button">Replace Yoda's quote</button>
   </div>
+  <div>
+    <h2>Remove Darth Vader</h2>
+    <p>Delete one Darth, does nothing if no Darth</p>
+    <button id="delete-button">Delete Darth Vader's quote</button>
+  </div>
+  <div id="message"></div>
   <script src="/main.js"></script>
   </body>
 </html>
