--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,39 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <title>Star Wars Quote App</title>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <h1>May Node and Express be with you.</h1>
+    <h1 data-position="header">May Node and Express be with you.</h1>
 
-    <form action="/quotes" method="POST">
-      <input type="text" placeholder="name" name="name" />
-      <input type="text" placeholder="quote" name="quote" />
-      <button type="submit">Submit</button>
-    </form>
-    <h2> Quotes </h2>
+    <section data-position="add-quotes">
+      <h2>Add quote</h2>
 
-  <ul class="quotes">
-    <!-- Loop through quotes -->
-    <% for(var i = 0; i < quotes.length; i++) {%>
-      <li class="quote">
-        <!-- Output name from the iterated quote object -->
-        <span><%= quotes[i].name %></span>:
-        <!-- Output quote from the iterated quote object -->
-        <span><%= quotes[i].quote %></span>
-      </li>
-    <% } %>
-  </ul>
-  <div>
-    <h2>Darth Vader invades!</h2>
-    <p>Replace first Yoda's quote with a quote written by Darth Vader</p>
-    <button id="update-button">Replace Yoda's quote</button>
-  </div>
-  <div>
-    <h2>Remove Darth Vader</h2>
-    <p>Delete one Darth, does nothing if no Darth</p>
-    <button id="delete-button">Delete Darth Vader's quote</button>
-  </div>
-  <div id="message"></div>
-  <script src="/main.js"></script>
+      <form action="/quotes" method="POST">
+        <input type="text" placeholder="name" name="name" />
+        <input type="text" placeholder="quote" name="quote" />
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+
+    <section data-position="update-quote">
+      <div>
+        <h2>Darth Vader invades!</h2>
+        <p>Replace first Yoda's quote with a quote written by Darth Vader</p>
+        <button id="update-button">Replace Yoda's quote</button>
+      </div>
+    </section>
+
+    <section data-position="delete-quote">
+      <div>
+        <h2>Remove Darth Vader</h2>
+        <p>Delete one Darth, does nothing if no Darth</p>
+        <button id="delete-button">Delete Darth Vader's quote</button>
+      </div>
+      <div id="message"></div>
+    </section>
+
+    <section data-position="quotes">
+      <h2>Quotes</h2>
+
+      <ul class="quotes">
+        <!-- Loop through quotes -->
+        <% for(var i = 0; i < quotes.length; i++) {%>
+        <li class="quote">
+          <!-- Output name from the iterated quote object -->
+          <span><%= quotes[i].name %></span>:
+          <!-- Output quote from the iterated quote object -->
+          <span><%= quotes[i].quote %></span>
+        </li>
+        <% } %>
+      </ul>
+    </section>
+
+    <script src="/main.js"></script>
   </body>
 </html>
